<resources>
    <string name="app_name">FreshFoodProject</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="register">Registrati</string>
    <string name="already_signed">Hai già un account?</string>
    <string name="login">Login</string>
    <string name="email">Inserisci qui la tua Email</string>
    <string name="password">Password</string>
    <string name="password_dimenticata">Password Dimenticata?</string>
    <string name="login_with">Accedi con</string>
    <string name="filling_form">Inserisci i tuoi dati</string>
    <string name="edit_name">Inserisci il tuo nome</string>
    <string name="edit_surname">Inserisci il tuo cognome</string>
    <string name="edit_zipcode">Inserisci il tuo cap</string>
    <string name="edit_city">Inserisci la tua città</string>
    <string name="btn_completed">Completato</string>
    <string name="edit_phone">Inserisci il tuo numero mobile</string>
    <string name="verification_code">Codice di verifica</string>
    <string name="subtitle_OTP">Inserisci il codice di verifica inviato alla tua email a@b.com</string>
    <string name="error_snackbar">Inserisci tutte le cifre del codice OTP</string>
    <string name="error_invalid_code">Codice errato</string>
    <string name="code_resent_success">Codice reinviato con successo</string> <!-- Messaggio per codice reinviato -->
    <string name="send_new_code">Invia nuovo codice</string>
    <string name="send">Invia</string>
    <string name="login_error_message">Email o Password errati</string>
    <string name="subtitle1_forgotpsw">Inserisci la tua email per reimpostare la password</string>
    <string name="subtitle2_forgotpsw">Email</string>
    <string name="title_forgotpsw">Reset Password</string>
    <string name="error_snackbar_forgotpsw">Inserisci email valida</string>
    <string name="preview1">Scopri le novità nella nostra app. In poche schermate</string>
    <string name="preview2">Una fidelity card unica. \n Per tutto.</string>
    <string name="preview2_2">Per tutto.</string>
    <string name="preview2_text">Per acquisti nei negozi aderenti</string>
    <string name="preview2_text2">Per acquisti in app</string>
    <string name="skip">Salta</string>
    <string name="preview3_title">I nostri impegni:</string>
    <string name="preview2_title2">UNA RIVOLUZIONE</string>
    <string name="preview3_text1">Sezione spesa sospesa \nper i più bisognosi</string>
    <string name="preview3_text2">Sezione prodotti \na breve scadenza \ncon forti sconti</string>
    <string name="preview3_text4">Una community nella nostra app \nper acquistare e fare il rider \n(a discrezione dell\'utente)</string>
    <string name="preview3_text3">collaborazione con il banco alimentare</string>
    <string name="preview3_btn_end">Fine</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prodotti_a_breve_scadenza">Prodotti a breve scadenza</string>
    <string name="frutta_e_verdura">Frutta e verdura</string>
    <string name="prodotti_da_forno">prodotti da forno</string>
    <string name="prodotti_bio">prodotti bio</string>
    <string name="prodotti_per_la_casa">prodotti per la casa</string>
    <string name="testo_top_ciao_massimo">Ciao, Massimo</string>
    <string name="carta_sconti_11223344556677">Carta sconti 11223344556677</string>
    <string name="fidelity_text">Scopri la lista dei negozi aderenti per usufruire di tutti gli sconti \n</string>
</resources>