<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5C4FF"
    android:id="@+id/rootLayout"
    tools:context=".accesso.OtpVerificationCodePage">
    <!-- Titolo principale della schermata -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/freshfood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />
    <!-- Sottotitolo -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_OTP"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />
    <!-- Contenitore per i campi OTP -->
    <LinearLayout
        android:id="@+id/otp_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_gravity="center">

        <!-- Prima casella OTP -->
        <EditText
            android:id="@+id/otp_digit_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/otp_box_background"
            android:gravity="center"
            android:inputType="number"
            android:textSize="24sp"
            android:maxLength="1" />

        <!-- Seconda casella OTP -->
        <EditText
            android:id="@+id/otp_digit_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/otp_box_background"
            android:gravity="center"
            android:inputType="number"
            android:textSize="24sp"
            android:maxLength="1"
            android:layout_marginStart="8dp" />

        <!-- Terza casella OTP -->
        <EditText
            android:id="@+id/otp_digit_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/otp_box_background"
            android:gravity="center"
            android:inputType="number"
            android:textSize="24sp"
            android:maxLength="1"
            android:layout_marginStart="8dp" />

        <!-- Quarta casella OTP -->
        <EditText
            android:id="@+id/otp_digit_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/otp_box_background"
            android:gravity="center"
            android:inputType="number"
            android:textSize="24sp"
            android:maxLength="1"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/deep_blue"
        android:text="@string/send_new_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_container" />

    <!-- Bottone per inviare il codice OTP -->
    <Button
        android:id="@+id/button_invia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/deep_blue"
        android:text="Invia"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_resend"
        app:layout_constraintWidth_percent="0.7" /> <!-- Larghezza bottone al 70% dello schermo -->
  </androidx.constraintlayout.widget.ConstraintLayout>